<resources>
    <string name="app_name">Practice4</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="notify">Notify now</string>
    <string name="click">You\'ve clicked at button!</string>
    <string name="one_minute_passed">1 minute is passed!</string>
    <string name="tv_time">00:00</string>
    <string name="notify_by_time">Notify at time</string>
    <string name="time_passed">Now %1$d:%2$d o\'clock!</string>
    <string name="one_minute_action">one_minute</string>
    <string name="time_action">time_action</string>
    <string name="boot">Device is rebooted</string>
    <string name="ok">Ok</string>
    <string name="battery">Your battery lower than 30%</string>
    <string name="et_wifi_name">Wi-fi name</string>
    <string name="btn_catch_connect">Catch wi-fi connection</string>
    <string name="wifi_input">Enter wifi name!</string>
    <string name="btn_stop_catching">Stop catching</string>
    <string name="connected">You\'ve connected to %1$s network!</string>
</resources>
