<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <Button
        android:id="@+id/btn_notify_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/notify" />

    <Button
        android:id="@+id/btn_notify_by_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_by_time"/>

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/et_wifi_name"
        android:hint="@string/et_wifi_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_catch_connect"
        android:text="@string/btn_catch_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_stop_catching"
        android:text="@string/btn_stop_catching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>
